Update #1.8 Rebuild Profile Page Add 3 section (user Statistics, manage account and last games) Add Password Reset function and get all player games Info

--- a/.gitignore
+++ b/.gitignore
@@ -363,5 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 
 #Folders
-Uploads/*
-!Uploads/.gitkeep
+Chess_Online.Server/Uploads/*
+!Chess_Online.Server/Uploads/.gitkeep
